--- a/5 - CSS Intermediário/projeto-menu/index.html
+++ b/5 - CSS Intermediário/projeto-menu/index.html
@@ -37,6 +37,31 @@
                 </li>
                 <li>
                     <a href="#">Produtos</a>
+                    <ul class="submenu">
+                        <li>
+                            <a href="#">Computadores</a>
+                        </li>
+                        <li>
+                            <a href="#">Celulares</a>
+                        </li>
+                        <li>
+                            <a href="#">Headsets</a>
+                        </li>
+                        <li>
+                            <a href="#">Consoles</a>
+                            <ul class="submenu">
+                                <li>
+                                    <a href="#">Playstation</a>
+                                </li>
+                                <li>
+                                    <a href="#">X-Box</a>
+                                </li>
+                                <li>
+                                    <a href="#">Switch</a>
+                                </li>
+                            </ul>
+                        </li>
+                    </ul>
                 </li>
                 <li>
                     <a href="#">Serviços</a>
